fixed horizontal scrolling from right filter options

--- a/public/output.css
+++ b/public/output.css
@@ -542,6 +542,26 @@ video {
   top: 0.5rem;
 }
 
+.right-10 {
+  right: 2.5rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-auto {
+  right: auto;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -691,11 +711,23 @@ video {
   transition-duration: 150ms;
 }
 
+.last-of-type\:right-10:last-of-type {
+  right: 2.5rem;
+}
+
 .last-of-type\:mb-0:last-of-type {
   margin-bottom: 0px;
 }
 
 @media (min-width: 480px) {
+  .sm\:left-0 {
+    left: 0px;
+  }
+
+  .sm\:right-auto {
+    right: auto;
+  }
+
   .sm\:block {
     display: block;
   }
